k3s/manifests/librechat/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: librechat
spec:
  type: ClusterIP
  selector:
    app: mongodb
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
