k3s/manifests/librechat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: librechat
  namespace: librechat
  annotations:
    tailscale.com/proxy-class: "prod"
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: librechat
                port:
                  number: 3080
  tls:
    - hosts:
        - librechat
